// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IssueSummary renders a critical message when the critical level count is non-zero 1`] = `
<span
  className={null}
>
  <span
    className="kuiStatusText kuiStatusText--error"
  >
    <span
      className="kuiStatusText__icon kuiIcon fa-warning"
    />
    <span>
      1
       error
    </span>
  </span>
</span>
`;

exports[`IssueSummary renders a success message when all issue level counts are 0 1`] = `
<span
  className={null}
>
  <span
    className="kuiStatusText kuiStatusText--success"
  >
    <span
      className="kuiStatusText__icon kuiIcon fa-check"
    />
    No problems
  </span>
</span>
`;

exports[`IssueSummary renders a success message when only the none level count is non-zero 1`] = `
<span
  className={null}
>
  <span
    className="kuiStatusText kuiStatusText--success"
  >
    <span
      className="kuiStatusText__icon kuiIcon fa-check"
    />
    No problems
  </span>
</span>
`;

exports[`IssueSummary renders a warning message when only none, info and warning level counts are non-zero 1`] = `
<span
  className={null}
>
  <span
    className="kuiStatusText kuiStatusText--warning"
  >
    <span
      className="kuiStatusText__icon kuiIcon fa-bolt"
    />
    <span>
      2
       warnings
    </span>
  </span>
</span>
`;

exports[`IssueSummary renders an info message when only none and info level counts are non-zero 1`] = `
<span
  className={null}
>
  <span
    className="kuiStatusText kuiStatusText--info"
  >
    <span
      className="kuiStatusText__icon kuiIcon fa-info"
    />
    <span>
      3
       notes
    </span>
  </span>
</span>
`;

exports[`IssueSummary renders the className property 1`] = `
<span
  className="myClass"
>
  <span
    className="kuiStatusText kuiStatusText--success"
  >
    <span
      className="kuiStatusText__icon kuiIcon fa-check"
    />
    No problems
  </span>
</span>
`;
